kustomize/argocd-bot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-bot
  labels:
    app.kubernetes.io/name: argocd-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-bot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-bot
    spec:
      containers:
        - name: argocd-bot
          image: pcjun97/argocd-bot
          imagePullPolicy: Always
          args:
            - /data/config.yaml
          ports:
            - containerPort: 8081
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /data
              readOnly: true
      volumes:
        - name: config
          secret:
            secretName: argocd-bot
