kustomize/argocd-bot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-bot
spec:
  selector:
    app.kubernetes.io/name: argocd-bot
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
